Canvas removed from DOM on mobile devices

--- a/css/district.css
+++ b/css/district.css
@@ -76,7 +76,12 @@ a {
 .slide > .puzzle {
     order: 1;
 
+    width: 640px;
+    height: 640px;
+
     margin: 8px 32px 8px 32px;
+
+    border: 1px solid black;
 }
 
 .slide > .gap {
