--- a/css/sandbox.css
+++ b/css/sandbox.css
@@ -16,6 +16,37 @@ body {
     text-align: center;
 }
 
+.title {
+    width: 100%;
+    margin: 16px;
+
+    font-size: 64px;
+    font-weight: bold;
+    text-align: center;
+}
+
+.subtitle {
+    width: 100%;
+    margin: 0 auto 32px auto;
+
+    font-size: 32px;
+    text-align: center;
+}
+
+.redirect {
+    width: 100%;
+    margin: 16px;
+
+}
+
+.redirect > a {
+    color: #888;
+    font-size: 16px;
+    text-align: center;
+
+    text-decoration: none;
+}
+
 .sandbox {
     display: flex;
     flex-direction: row;
