--- a/css/sandbox.css
+++ b/css/sandbox.css
@@ -155,6 +155,11 @@ body {
     -moz-user-select: none; /* Firefox */
     -ms-user-select: none; /* IE10+ */
 }
+.sandbox > .tools > .container > .quantity > .button > img {
+    width: 24px;
+    height: 24px;
+    margin-top: 12px;
+}
 
 .sandbox > .tools > .container > .quantity > .button:hover {
     background-color: #bbb;
